--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,8 +10,8 @@
 }
 
 body {
-    font-family: var(--font-inter), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    letter-spacing: -0.01em;
+    font-family:  -apple-system, var(--font-inter), BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    letter-spacing: 0em;
     /* Adjust this value as needed */
     font-optical-sizing: none;
     font-feature-settings: 'liga' 1, 'calt' 1;
