--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -6,14 +6,14 @@
 
 .dot {
     display: inline-block;
-    width: 8px;
-    height: 8px;
-    margin-left: -2px;
+    width: 5px;
+    height: 5px;
+    margin-left: 1px;
     border-radius: 50%;
     flex-shrink: 0;
-    min-width: 8px;
-    min-height: 8px;
-    border: 1px solid var(--color-background);
+    min-width: 5px;
+    min-height: 5px;
+    border: 1px solid rgba(var(--color-foreground-rgb), 0.1); 
 }
 
 
