--- a/src/styles/archive/archiveList.module.css
+++ b/src/styles/archive/archiveList.module.css
@@ -1,13 +1,34 @@
+.row {
+    position: relative;
+    display: grid;
+    grid-template-columns:
+        minmax(60px, 0.2fr)     /* Img */
+        minmax(200px, 2.2fr)    /* Project Name */
+        minmax(40px, 0.2fr)     /* Dots (Categories) */
+        minmax(160px, 0.8fr)    /* Tags */
+        minmax(50px, 0.25fr)     /* Date */
+        minmax(30px, 0.2fr);    /* Link */
+  
+    align-items: center; /* baseline */
+    padding: var(--space-sm) 0.7rem;
+    overflow: visible;
+
+}
+
 .stickyHeader {
     position: sticky;
     top: 0;
-    padding-top: var(--space-lg);
-    z-index: 10;
-    background: var(--color-background);
+    padding: 0 var(--space-md);
+    margin: 0 -1rem;
+    z-index: 999;
+    background-color: rgba(var(--brand-grey-rgb), 0.08);
+    backdrop-filter: blur(22px);
+    -webkit-backdrop-filter: blur(22px);
 }
 
 .stickyHeader p {
-    font-size: var(--font-sm);
+    font-size: var(--font-xxs);
+    color: rgba(var(--color-foreground-rgb), 0.7);
 }
 
 @media (max-width: 1024px) {
