change: globals font var settings correction

--- a/src/styles/about/notifications.module.scss
+++ b/src/styles/about/notifications.module.scss
@@ -172,7 +172,7 @@ $max-z: 20;
     margin: 0;
     text-align: left;
     font-size: var(--font-xs);
-    font-variation-settings: var(--var-sm),  "wght" 520;
+    font-variation-settings: var( --var-lg);
 }
 
 .details p {
