--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,8 +10,7 @@
 }
 
 body {
-    font-family:  -apple-system, var(--font-inter), BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    letter-spacing: 0em;
+    font-family:  -apple-system,  BlinkMacSystemFont, var(--font-inter), "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     /* Adjust this value as needed */
     font-optical-sizing: none;
     font-feature-settings: 'liga' 1, 'calt' 1;
@@ -27,6 +26,7 @@ body {
 
 p {
     font-size: var(--font-sm);
+    font-variation-settings: var(--var-sm);
     /*font-variation-settings: var(--var-sm);*/
 }
 
@@ -43,11 +43,15 @@ a {
 ul li { font-size: var(--font-sm) } 
 
 
-:where(b,strong){font-weight:500;} 
+:where(b,strong){
+    font-weight:500;
+    font-variation-settings: var( --var-lg);
+} 
 
 h5,h4,h3,h2,h1 {
     line-height: 1.3;
     font-weight:500;
+    font-variation-settings: var( --var-lg);
 }
 
 h3 {
@@ -178,7 +182,7 @@ h2 a::after {
     padding: var(--space-xxs) var(--space-xs);
     font-size: var(--font-xs);
     font-weight: 500;
-    font-variation-settings: "opsz" 14, "wght" 500;
+    font-variation-settings: var(--var-lg);
     text-align: center;
 }
 
