--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -6,7 +6,7 @@
         minmax(200px, 2.2fr)    /* Project Name */
         minmax(40px, 0.2fr)     /* Dots (Categories) */
         minmax(160px, 0.8fr)    /* Tags */
-        minmax(50px, 0.25fr)     /* Date */
+        minmax(100px, 0.5fr)     /* Date */
         minmax(30px, 0.2fr);    /* Link */
   
     align-items: center; /* baseline */
@@ -79,6 +79,11 @@
    padding-right: var(--space-lg);
 }
 
+.col5,
+.col6  {
+   padding-right: 0;
+}
+
 .col1 {
     z-index: 4;
 }
@@ -96,6 +101,13 @@
     display: flex;
     flex-direction: column;
     gap: 1px;
+}
+
+
+.col6, .col5 {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 @media (max-width: 1024px) {
