--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -10,7 +10,7 @@
         minmax(30px, 0.2fr);    /* Link */
   
     align-items: center; /* baseline */
-    padding: var(--space-sm) 0.7rem;
+    padding: var(--space-md) 0.7rem;
     border-bottom: 1px solid var(--color-line);
     overflow: visible;
 
@@ -27,7 +27,7 @@
     border-bottom-color: transparent;
     border-radius: 0;
     margin: -1px 0;
-    padding: calc(var(--space-sm) + 1px) 0.7rem;
+    padding: calc(var(--space-md) + 1px) 0.7rem;
     cursor: pointer;
 }
 
