--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -1,19 +1,17 @@
 .category {
     display: inline;
     align-items: baseline;
-    float: right;
 }
 
 .dot {
     display: inline-block;
-    width: 8px;
-    height: 8px;
-    margin-left: -4px;
+    width: 7px;
+    height: 7px;
     border-radius: 50%;
+    margin-right: 2px;
     flex-shrink: 0;
-    min-width: 8px;
-    min-height: 8px;
-    border: 1px solid rgba(var(--color-background-rgb), 1);
+    min-width: 7px;
+    min-height: 7px;
 }
 
 
