--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -2,22 +2,22 @@
     position: relative;
     display: grid;
     grid-template-columns:
-        minmax(60px, 0.2fr)     /* Img */
+        minmax(120px, 0.25fr)     /* Img */
         minmax(200px, 2.2fr)    /* Project Name */
-        minmax(40px, 0.2fr)     /* Dots (Categories) */
-        minmax(160px, 0.8fr)    /* Tags */
-        minmax(100px, 0.5fr)     /* Date */
-        minmax(30px, 0.2fr);    /* Link */
+        minmax(60px, 0.3fr)     /* Dots (Categories) */
+    /*    minmax(160px, 0.8fr)     Tags */
+        minmax(100px, 0.25fr)    /* Date */
+        minmax(80px, 0.2fr);    /* Link */
   
     align-items: center; /* baseline */
-    padding: var(--space-md) 0.7rem;
+    padding: var(--space-lg) 0;
     border-bottom: 1px solid var(--color-line);
     overflow: visible;
 
 }
 
 .row4col:hover {
-    z-index: 10;            /* anything > 0 will beat the default “auto” rows */
+    z-index: 10; /* anything > 0 will beat the default “auto” rows */
   }
 
 
@@ -27,7 +27,7 @@
     border-bottom-color: transparent;
     border-radius: 0;
     margin: -1px 0;
-    padding: calc(var(--space-md) + 1px) 0.7rem;
+    padding: calc(var(--space-lg) + 1px) 0;
     cursor: pointer;
 }
 
@@ -54,12 +54,6 @@
     opacity: 1;
 }
 
-/*
-.row4col:hover [data-image],
-.row4col:hover [data-description] {
-    display: block;
-}
-*/
 
 .row4col:hover [data-view] {
     transform: translate(-50%, -70%) scale(1);
@@ -70,26 +64,16 @@
 }
 
 
-
-.col1,
-.col2,
-.col3,
-.col4,
-.col5  {
-   padding-right: var(--space-lg);
-}
-
-.col5,
-.col6  {
-   padding-right: 0;
-}
-
 .col1 {
     z-index: 4;
+    justify-self: start;
+    padding-left: var(--space-md);
+
 }
 
 .col2 {
     z-index: 3;
+    padding-right: var(--space-lg);
 }
 
 .col3 ,
@@ -97,27 +81,17 @@
     z-index: 5;
 }
 
-.col4 {
-    display: flex;
-    flex-direction: column;
-    gap: 1px;
+.col4,
+.col5 {
+  justify-self: end;
+  padding-right: var(--space-lg);
 }
 
-
-.col6, .col5 {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
 
 @media (max-width: 1024px) {
     .row4col {
         grid-template-columns: 1fr;
-        row-gap: var(--space-row);
-        border: 1px solid var(--color-line);
-        padding: var(--space-row);
-        border-radius: var(--radius-lg);
-        margin-top: var(--space-md);
+
     }
 
 }
@@ -131,11 +105,7 @@
 
     .row4col {
         grid-template-columns: 1fr;
-        row-gap: var(--space-row);
-        border: 1px solid var(--color-line);
-        padding: var(--space-row);
-        border-radius: var(--radius-lg);
-        margin-top: var(--space-md);
+
     }
 
 }
