--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -100,7 +100,7 @@
 
 .dark {
     color-scheme: dark;
-    --color-background: #0a0a0a;
+    --color-background: #1E1F1F;
     --color-background-rgb: 10, 10, 10;
     --color-foreground: #ededed;
     --color-foreground-rgb: 237, 237, 237;
