--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     max-width: 100vw;
     color: var(--color-foreground);
-    background: var(--color-background);
+    /* background: var(--color-background); */
 }
 
 
