--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -1,17 +1,20 @@
 .category {
-    display: inline;
+    display: inline-flex;
+    flex-direction: row-reverse;  
     align-items: baseline;
 }
 
 .dot {
     display: inline-block;
-    width: 7px;
-    height: 7px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
-    margin-right: 2px;
+    margin-right: -2px;
     flex-shrink: 0;
-    min-width: 7px;
-    min-height: 7px;
+    min-width: 9px;
+    min-height: 9px;
+    /* border: 1px solid rgba(var(--color-background-rgb), 1); */
+    box-shadow: inset 0 0px 1px 0 rgba(0, 0, 0, 0.15);
 }
 
 
