--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -7,14 +7,17 @@
 
 .dot {
     display: inline-block;
-    width: 8px;
-    height: 8px;
+    width: 7px;
+    height: 7px;
     border-radius: 50%;
-    margin-right: -2px;
+    margin-right: -4px;
     flex-shrink: 0;
-    min-width: 9px;
-    min-height: 9px;
+    min-width: 7px;
+    min-height: 7px;
     /* border: 1px solid rgba(var(--color-background-rgb), 1); */
+    
+    border: 2px solid rgba(var(--color-background-rgb), 1);
+
     box-shadow: inset 0 0px 1px 0 rgba(0, 0, 0, 0.15);
 }
 
