--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -2,21 +2,36 @@
     position: relative;
     display: grid;
     grid-template-columns:
-        minmax(90px, 0.2fr)     /* Img */
-        minmax(200px, 3fr)    /* Project Name */
-        minmax(50px, 0.15fr)     /* Dots (Categories) */
-    /*    minmax(160px, 0.8fr)     Tags */
-        minmax(90px, 0.2fr)    /* Date */
-        minmax(90px, 0.2fr);    /* Link */
+        minmax(40px, 0.09fr)     /* Thumbnail */
+        minmax(200px, 1.3fr)      /* Project Name */
+        minmax(50px, 0.1fr)    /* Dots */
+        minmax(160px, 0.75fr)    /* Comments */
+        minmax(130px, 0.5fr)     /* Tags */
+        minmax(50px, 0.14fr);    /* Date */
   
     align-items: center; /* baseline */
     
-    border-bottom: 1px solid var(--color-line);
     overflow: visible;
-    margin: 0 0;
-    padding:  2rem  2rem;
+    margin: 0  var(--space-md);
+    padding:  var(--space-sm)  var(--space-md) ;
+    border-radius: var(--radius-sm);
+    height: 1.7rem;
 
 }
+
+/* Zebra-stripe odd rows */
+.row4col:nth-child(even) {
+    background-color: rgba(var(--brand-grey-rgb), 0.15);
+  }
+  
+  .row4col:nth-child(odd) {
+    background-color: transparent;
+  }
+  
+  .row4col:hover {
+    background-color: var(--color-background);
+
+  }
 
 .row4col:hover {
     z-index: 10; /* anything > 0 will beat the default “auto” rows */
@@ -26,13 +41,9 @@
 .row4col[data-archive-row]:hover {
     background-color: var(--color-background);
     border-radius: var(--radius-md);
-    
-    border-bottom-color: transparent;
-    
-    border-radius: 0;
     cursor: pointer;
-    margin: -1px 0;
-    padding: calc( 2em + 1px) 2rem;
+
+ 
 
 }
 
@@ -74,31 +85,12 @@
 
 .col1 {
     z-index: 4;
-    justify-self: start;
-    padding-left: 0rem;
-
 }
 
-.col2 {
-    z-index: 3;
-    padding-right: var(--space-md);
+.col2, .col3, .col4, .col5 {
+ margin-right: var(--space-md);
 }
 
-.col3 ,
-.col4 {
-    z-index: 5;
-}
-
-
-.col4{
-  justify-self: end;
-  padding-right: 0;
-}
-
-.col5 {
-  justify-self: end;
-  padding-right:  0rem;
-}
 
 
 @media (max-width: 1024px) {
