--- a/src/styles/ui/tag.module.css
+++ b/src/styles/ui/tag.module.css
@@ -1,13 +1,8 @@
 .tag {
     display: inline;
     padding-top: var(--space-sm);
-    font-size: var(--font-sm);
     color: rgba(var(--color-foreground-rgb), 0.6);
     white-space: nowrap;
+    font-variation-settings: var(--var-md);
 
-}
-
-.tag:hover {
-    color: var(--brand-blue);
-    cursor: pointer;
 }
